# artemis-cubesat-kit

./: .gitignore  LICENSE  README.md
BeagleBone/config/: sun_sensors.json  temp_sensors.json
BeagleBone/include/: cubesat_defs.h
BeagleBone/source/: CMakeLists.txt
PyCubed/: beaglebone.py  file.py  gps.py  imu.py  main.py  power.py  radio.py  switch.py
PyCubed/tests/: file_test.py  imu_test.py  power_test.py
RaspberryPi/: payload.py  test_agents.py
RaspberryPi/cubesat/: __init__.py  agent.py  beaglebone.py  cubesatclass.py  gps.py  heater.py  imu.py  sunsensor.py  tempsensor.py
Software/PyCubed/: beaglebone.py  main.py  power.py  switch.py  temp.py  tests.py
Software/RaspberryPi/: test_sensors.py
cubesat-kit/: README.md
cubesat-kit/include/: cubesat_defs.h
cubesat-kit/scripts/: cosmos.py  payload.py  test123.py
cubesat-kit/source/: CMakeLists.txt  QtCreatorDeployment.txt
cubesat-kit/source/agents/: CMakeLists.txt  agent_adcs.cpp  agent_attitude.cpp  agent_comms.cpp  agent_eps.cpp  agent_heater.cpp  agent_payload.cpp  agent_pycubed.cpp  agent_python.cpp  agent_raspi.cpp  agent_sunsensor.cpp  agent_switch.cpp  agent_temp.cpp  agent_template.cpp  agent_thermal.cpp
docs/: Gemfile  README.md  _config.yml  about.md  index.md
docs/_data/: topnav.yml
docs/_includes/: footer.html  head.html  image.html  link.html  sidebar.html  topnav.html
scripts/: config  deploy-agents  deploy-raspi  update-agents  update-routes
software/: GPS_parsing.py  VTG_parsing.py  adafruit_rfm9x.py  adm1176.py  bmx160.py  bq25883.py  payload.py  pycubed.py
(+163 files in other folders)
